--- a/website/music/listening-log/2023/log.css
+++ b/website/music/listening-log/2023/log.css
@@ -4,11 +4,7 @@
 }
 
 p img {
-	vertical-align: baseline;
-}
-
-b{
-	text-shadow:none;
+	vertical-align: middle;
 }
 
 i {
@@ -34,11 +30,11 @@ h2 {
 	margin: auto;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	word-spacing:0px;
+	word-spacing: 0px;
 }
 
 header {
-	word-spacing:var(--spacing);
+	word-spacing: var(--spacing);
 	width: 100%;
 	border: var(--l-border);
 	text-align: center;
@@ -56,7 +52,7 @@ side {
 .content {
 	background: var(--l-brown);
 	color: var(--l-yellow);
-	word-spacing:var(--spacing);
+	word-spacing: var(--spacing);
 	width: 290px;
 	margin-top: 20px;
 	padding: 5px;
@@ -71,13 +67,18 @@ side {
 	-webkit-text-stroke-color: var(--brown);
 }
 
-.bg{
-	font-size:15px;
-	text-align:center;
+.bg {
+	font-size: 15px;
+	text-align: center;
 }
 
-.nav{
-	text-align:center;
+.vids iframe {
+	width: 100%;
+	height: 150px;
+}
+
+.nav {
+	text-align: center;
 }
 
 
@@ -89,10 +90,10 @@ main {
 .title b {
 	background: rgb(230, 187, 187);
 	background: linear-gradient(90deg, rgba(230, 187, 187, 1) 0%, rgba(249, 255, 209, 1) 26%, rgba(216, 255, 209, 1) 52%, rgba(209, 241, 255, 1) 76%, rgba(244, 209, 255, 1) 100%);
+	text-shadow: none;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	-webkit-text-stroke-width: 1px;
-	/* this is the border */
 	-webkit-text-stroke-color: var(--l-brown);
 }
 
@@ -102,7 +103,7 @@ iframe {
 
 .log {
 	background: var(--l-pink);
-	word-spacing:var(--spacing);
+	word-spacing: var(--spacing);
 	width: 600px;
 	padding: 10px;
 	border: var(--d-border);
@@ -120,7 +121,7 @@ iframe {
 }
 
 footer {
-	word-spacing:var(--spacing);
+	word-spacing: var(--spacing);
 	padding: 5px;
 	margin-top: 20px;
 	width: 100%;
@@ -130,10 +131,10 @@ footer {
 	border-radius: 0px 0px 20px 20px;
 }
 
-#top{
-	position:fixed;
-	right:20px;
-	bottom:10px;
+#top {
+	position: fixed;
+	right: 20px;
+	bottom: 10px;
 }
 
 @media only screen and (max-width: 940px) {
@@ -170,7 +171,7 @@ footer {
 	header,
 	.info,
 	iframe,
-	#top{
+	#top {
 		display: none;
 	}
 
