--- a/website/journal/entry.css
+++ b/website/journal/entry.css
@@ -23,6 +23,12 @@ img {
 	vertical-align: middle;
 }
 
+hr {
+	background: url('/!g/div/scissors.gif');
+	height: 20px;
+	border: 0px;
+}
+
 #log {
 	padding: 0px;
 	max-width: 700px;
