--- a/website/music/frame.css
+++ b/website/music/frame.css
@@ -1,14 +1,17 @@
 #frame {
 	background: var(--l-yellow);
 	max-width: 700px;
-margin:auto;
+	margin: auto;
 	padding: 5px 10px 40px 10px;
 	border: 4px dashed var(--l-brown);
 	border-top: none;
 	border-bottom: none;
 }
 
-h1,
+h1 {
+	text-align: center;
+}
+
 h2,
 h3,
 h4,
@@ -27,7 +30,7 @@ footer {
 	color: var(--yellow);
 	text-align: center;
 	max-width: 700px;
-	margin:auto;
+	margin: auto;
 	margin-bottom: 20px;
 	border: 2px solid var(--yellow);
 }
@@ -58,6 +61,7 @@ footer {
 	}
 
 	footer {
+		border: 0px;
 		margin: auto;
 		max-width: 100%;
 	}
