--- a/website/!f/homepage-v3/flower.css
+++ b/website/!f/homepage-v3/flower.css
@@ -3,21 +3,33 @@
 /*main colors: yellow, blue, mint green */
 
 :root {
-	--d-yellow: rgb(214, 158, 46);
-	--l-yellow: rgb(250, 240, 137);
-	--d-blue: rgb(102, 126, 234);
-	--l-blue: rgb(168, 196, 232);
-	--d-mint: rgb(124, 182, 175);
-	--l-mint: #C5E6E1;
+	--d-yellow: #F4B535;
+	--l-yellow: #FFEBAF;
+	--d-blue: #4A90C6;
+	--l-blue: #BFE1F2;
 	--l-brown: #C39684;
 	--d-brown: #8C7167;
-	--d-green: #4D6B4D;
-	--grey: rgb(203, 213, 224);
+	--l-pink: #FFB5D5;
+	--d-pink: #FE6D92;
+	--l-green: #A9D079;
+	--d-green: #285114;
+	--purple: #90619D;
+	--grey: #EDF4F7;
 	--black: rgb(26, 32, 44);
+	--shadow: rgb(237, 244, 247, 0.8);
+	--border1: 3px dotted var(--l-yellow);
+	--border2: 3px dotted var(--l-pink);
+	--border3: 3px dotted var(--l-blue);
+	--bg1: rgb(191, 225, 242, 0.8);
+	--bg2: rgb(255, 229, 162, 0.9);
+	--bg3: rgb(255, 181, 213, 0.8);
+	--bg4: rgb(169, 208, 121, 0.8);
+	--gradient1: rgb(191, 225, 242);
+	--gradient2: linear-gradient(137deg, rgba(191, 225, 242, 0.8) 0%, rgba(255, 247, 223, 0.8) 48%, rgba(255, 181, 213, 0.8) 100%);
 }
 
 body {
-	color: var(--black);
+	color: var(--d-green);
 	background: url('/!g/homepage/bg5.png') no-repeat bottom fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -26,29 +38,47 @@ body {
 }
 
 .box {
-	border: 3px dotted var(--d-yellow);
 	border-radius: 10px;
-	background: rgb(247, 250, 252, 0.9);
 }
 
-header {
-	height: 112%;
-	color: white;
-	overflow: hidden;
+a {
+	color: var(--purple);
+	border-radius: 10px;
+}
+
+
+#nav,
+.hl {
+	background: var(--gradient1);
+	background: var(--gradient2);
+	border: 3px dotted var(--l-brown);
+}
+
+.hl {
+	border: 1px solid var(--black);
+	border-radius: 10px;
+	padding: 1px 3px;
 }
 
 #intro {
 	border-radius: 0px 0px 10px 10px;
 	padding-bottom: 50px;
+	border: 3px dotted var(--d-brown);
 }
 
 #intro p {
 	margin-top: 0px;
 }
 
-header p {
+header {
+	height: 112%;
+	color: white;
+	overflow: hidden;
 	font-size: 17px;
-	margin: 0px;
+}
+
+header p {
+	margin-top: -10px;
 	margin-left: 10px;
 	position: absolute;
 }
@@ -62,22 +92,23 @@ h1 {
 	background: linear-gradient(180deg, rgba(255, 166, 166, 1) 30%, rgba(124, 152, 116, 1) 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
-	filter: drop-shadow(2px 0px 0px white) drop-shadow(0px 2px 0px white) drop-shadow(-2px 0px 0px white) drop-shadow(0px -2px 0px white);
+	filter: drop-shadow(2px 0px 0px var(--shadow)) drop-shadow(0px 2px 0px var(--shadow)) drop-shadow(-2px 0px 0px var(--shadow)) drop-shadow(0px -2px 0px var(--shadow));
 }
 
 h2 {
+	color: var(--d-brown);
 	font-weight: normal;
-	font-family: newpenji, var(--fonts);
-	font-size: 26px;
-	letter-spacing: 3px;
+	font-family: always-in-my-heart, var(--fonts);
+	font-size: 32px;
 	margin-bottom: 10px;
 }
 
 h3 {
+	background: rgb(237, 244, 247, 0.8);
+	border-radius: 10px;
 	font-family: newpenji, var(--fonts);
-	font-size: 20px;
-	letter-spacing: 1px;
 	font-weight: normal;
+	font-size: 20px;
 }
 
 h3::after,
@@ -90,27 +121,88 @@ h3::before {
 }
 
 h3::after {
-	margin-left: 10px;
+	margin-left: 17px;
 }
 
+nav a img {
+	vertical-align: middle;
+}
 
 nav a {
-	font-family: newpenji, var(--fonts);
+	font-family: morningtea, var(--fonts);
+	color: var(--d-blue);
 	font-size: 19px;
-	color: var(--d-brown);
-	margin: 5px 0px;
+	font-weight: bold;
+	background: transparent;
+	padding: 0px 0px 0px 10px;
+	margin: 5px 5px;
+	display: block;
+	text-decoration: none;
+	transition-timing-function: ease-out;
+	transition-duration: 0.3s;
+}
+
+nav a:hover {
+	background: rgb(237, 244, 247, 0.8);
+	border: 1px solid var(--l-brown);
+	margin-left: 20px;
 }
 
 #status {
 	background-image: url('/!g/homepage/cloud1.png');
 }
 
+#updates,
+#listing {
+	background: var(--bg3);
+	border: var(--border3);
+}
+
+#theme-picker,
+#featured-page {
+	background: var(--bg2);
+	border: var(--border2);
+}
+
+#current,
+#webrings {
+	background: var(--bg1);
+	border: var(--border1);
+}
+
+#featured-cat,
+#button {
+	background: var(--bg4);
+	border: 3px dotted var(--l-brown);
+}
+
+#deco-1,
+#widget,
+#intro {
+	background: rgb(237, 244, 247, 0.8);
+	border: var(--border2);
+}
+
+#foot {
+	background: rgb(195, 150, 132, 0.8);
+	color: var(--grey);
+	border: var(--border1);
+}
+
+#foot a {
+	color: var(--l-yellow);
+}
+
+#foot .outlink::after {
+	content: url('/!g/web/materials/outlink1.png');
+}
+
 #updates h2 + li {
 	padding: 3px;
 	border-radius: 10px;
-	color: var(--d-blue);
-	background: var(--l-yellow);
-	border: 1px solid var(--d-blue);
+	color: var(--d-brown);
+	background: rgb(237, 244, 247, 0.8);
+	border: 2px solid var(--d-brown);
 }
 
 #music-btn {
@@ -166,7 +258,7 @@ nav a {
 
 #sticker8 {
 	content: url('https://doqmeat.neocities.org/!g/deco/sunflowers1.gif');
-	top: 90.9%;
+	top: 90.8%;
 	left: 20%;
 }
 
@@ -246,12 +338,18 @@ nav a {
 
 /*-----------------------*/
 
+.outlink::after {
+	content: url('/!g/web/materials/outlink2.png');
+	padding-left: 2px;
+	vertical-align: text-bottom;
+}
+
 #s-m-t-tooltip {
-	max-width: 200px;
+	max-width: 300px;
 	border-radius: 20px;
-	border: 1px dashed var(--black);
-	color: var(--grey);
-	background: var(--d-yellow);
+	border: 2px dashed var(--l-brown);
+	background: rgb(191, 225, 242);
+	background: linear-gradient(137deg, rgba(191, 225, 242, 1) 0%, rgba(255, 247, 223, 1) 48%, rgba(255, 181, 213, 1) 100%);
 }
 
 
