--- a/website/music/body.css
+++ b/website/music/body.css
@@ -35,7 +35,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: daydream, natsuzemi, gaegu-b, var(--fonts);
+	font-family: daydream, gaegu-b, var(--fonts);
 	word-spacing: 10px;
 	letter-spacing: 3px;
 	line-height: normal;
@@ -75,6 +75,12 @@ a:hover {
 b {
 	letter-spacing: 2px;
 	text-shadow: 1px 1px 2px var(--pink);
+}
+
+i {
+	color: var(--l-brown);
+	letter-spacing: 1px;
+	text-shadow: 1px 1px 2px var(--yellow);
 }
 
 mark {
