minor changes to music files

--- a/website/music/body.css
+++ b/website/music/body.css
@@ -57,6 +57,11 @@ a {
 	cursor: help;
 }
 
+::selection {
+	color: var(--peach);
+	background: var(--l-brown);
+}
+
 a:hover {
 	color: var(--soft-brown);
 	background: var(--l-yellow);
