--- a/website/notebook/archive/layouts/index.html
+++ b/website/notebook/archive/layouts/index.html
@@ -28,7 +28,7 @@
 	<style>
 		img {
 			vertical-align: middle;
-			width:100%;
+			width: 100%;
 		}
 
 		.date {
@@ -45,9 +45,9 @@
 		<center>
 			<h1>page layouts</h1>
 		</center>
-		
+
 		<h2>landing pages</h2>
-		<img title="nov 2023 / current!" src="231126-landingpage.jpg">
+		<img title="nov 2023" src="231214-landing.jpg">
 		<img title="halloween 2023" src="231001-index-halloweenver.jpg">
 
 		<h2>about</h2>
